ves-middle/tests/t1_test_cannot_assign_to_let.test
let x = "ok"
x = "error"

let y = "ok"
mut y = "warning"
y = "ok"

let _z = "ok"
{
    let _z = "ok"
    {
        mut _z = "ok"
        _z = "ok"
    }
    _z = "error"
}
_z = "error"

fn test(a) {
    a = 5
    return a
}

%output

error: Cannot assign twice to the immutable variable `x`
  ┌─ <source: #edae658e4fc9e594>:2:1
  │
2 │ x = "error"
  │ ^
  │ │
  │ Consider marking `x` as `mut` to make it mutable: `mut x`

error: Attempted to shadow a variable `y`
  ┌─ <source: #edae658e4fc9e594>:5:5
  │
4 │ let y = "ok"
  │     - First declared on line 4
5 │ mut y = "warning"
  │     ^ Later shadowed here

error: Cannot assign twice to the immutable variable `y`
  ┌─ <source: #edae658e4fc9e594>:6:1
  │
6 │ y = "ok"
  │ ^
  │ │
  │ Consider marking `y` as `mut` to make it mutable: `mut y`

error: Cannot assign twice to the immutable variable `_z`
   ┌─ <source: #edae658e4fc9e594>:15:5
   │
15 │     _z = "error"
   │     ^^
   │     │
   │     Consider marking `_z` as `mut` to make it mutable: `mut _z`

error: Cannot assign twice to the immutable variable `_z`
   ┌─ <source: #edae658e4fc9e594>:17:1
   │
17 │ _z = "error"
   │ ^^
   │ │
   │ Consider marking `_z` as `mut` to make it mutable: `mut _z`

error: Cannot assign twice to the immutable variable `a`
   ┌─ <source: #edae658e4fc9e594>:20:5
   │
20 │     a = 5
   │     ^
   │     │
   │     Consider marking `a` as `mut` to make it mutable: `mut a`